tests/NormalTests/paczka1/fuzzy1/30742647.err
Error in line 15: 2tTns1 A955 89,6
Error in line 10: A955 S668 60,7
Error in line 18: HTIQK S464 50,9
Error in line 22: A955 A955 83,8
Error in line 35: qjeDEBpR S686 46,6
Error in line 36: qjeDEBpR S464 17,9
